--- a/database/settings.json
+++ b/database/settings.json
@@ -1,13 +1,13 @@
 {
-	"prefix": "&",
+	"prefix": "/",
 	"gamewaktu": 60,
-	"limitCount": 30,
-	"ownerNumber": "6281804680327",
+	"limitCount": 15,
+	"ownerNumber": "6285731855426",
 	"gcount": {
 		"prem": 40,
 		"user": 20
 	},
 	"shape": {
-		"senku": "🍃"
+		"Han": "✨"
 	}
 }
